--- a/Vitkund/Views/Home/About.cshtml
+++ b/Vitkund/Views/Home/About.cshtml
@@ -88,7 +88,6 @@
                         <a class="rbt-btn rounded-player popup-video position-to-top rbtplayer" href="~/Content/assets/images/videos/vitkund-intro.mp4">
                             <span><i class="feather-play"></i></span>
                         </a>
-
                     </div>
                 </div>
                 <div class="col-lg-6">
@@ -100,7 +99,7 @@
                                         <i class="feather-check"></i>
                                     </div>
                                     <div class="feature-content">
-                                        <h6 class="feature-title">We want to make complete Entrepreneur</h6>
+                                        <h6 class="feature-title">हम सफल कारोबारी बनने में आपकी मदद करते हैं </h6>
                                     </div>
                                 </div>
 
@@ -109,7 +108,7 @@
                                         <i class="feather-check"></i>
                                     </div>
                                     <div class="feature-content">
-                                        <h6 class="feature-title">We support Make in India campaign.</h6>
+                                        <h6 class="feature-title">हम मेक इन इंडिया अभियान का समर्थन करते हैं।</h6>
                                     </div>
                                 </div>
 
@@ -118,7 +117,23 @@
                                         <i class="feather-check"></i>
                                     </div>
                                     <div class="feature-content">
-                                        <h6 class="feature-title">We are aiming 5 Trillion Economy.</h6>
+                                        <h6 class="feature-title">हमारा लक्ष्य 5 ट्रिलियन इकोनॉमी का है।</h6>
+                                    </div>
+                                </div>
+                                <div class="rbt-feature feature-style-1 align-items-center">
+                                    <div class="icon bg-pink-opacity">
+                                        <i class="feather-check"></i>
+                                    </div>
+                                    <div class="feature-content">
+                                        <h6 class="feature-title">प्रत्येक नामांकन पर हम बच्चों की शिक्षा में योगदान करते हैं</h6>
+                                    </div>
+                                </div>
+                                <div class="rbt-feature feature-style-1 align-items-center">
+                                    <div class="icon bg-pink-opacity">
+                                        <i class="feather-check"></i>
+                                    </div>
+                                    <div class="feature-content">
+                                        <h6 class="feature-title">हम वोकल फॉर लोकल अभियान का समर्थन करते हैं</h6>
                                     </div>
                                 </div>
 
@@ -127,16 +142,7 @@
                                         <i class="feather-check"></i>
                                     </div>
                                     <div class="feature-content">
-                                        <h6 class="feature-title">On every enrollment we contribute to a Child's Education.</h6>
-                                    </div>
-                                </div>
-
-                                <div class="rbt-feature feature-style-1 align-items-center">
-                                    <div class="icon bg-pink-opacity">
-                                        <i class="feather-check"></i>
-                                    </div>
-                                    <div class="feature-content">
-                                        <h6 class="feature-title">We support Vocal for Local.</h6>
+                                        <h6 class="feature-title">हम आत्मनिर्भर भारत अभियान का समर्थन करते हैं</h6>
                                     </div>
                                 </div>
                                 <div class="rbt-feature feature-style-1 align-items-center">
@@ -144,7 +150,7 @@
                                         <i class="feather-check"></i>
                                     </div>
                                     <div class="feature-content">
-                                        <h6 class="feature-title">We support विकसित भारत अभियान</h6>
+                                        <h6 class="feature-title">हम विकसित भारत अभियान का समर्थन करते हैं</h6>
                                     </div>
                                 </div>
                                 <div class="rbt-feature feature-style-1 align-items-center">
