--- a/Vitkund/Views/Home/Index.cshtml
+++ b/Vitkund/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
 
                                 </p>
                                 <div class="slider-btn">
-                                    <a class="rbt-btn btn-gradient hover-icon-reverse" href="#">
+                                    <a class="rbt-btn btn-gradient hover-icon-reverse" href="/about-us">
                                         <span class="icon-reverse-wrapper">
                                             <span class="btn-text">View More</span>
                                             <span class="btn-icon"><i class="feather-arrow-right"></i></span>
@@ -199,7 +199,7 @@
 
                             <!-- End Feature List  -->
                             <div class="about-btn mt--40">
-                                <a class="rbt-btn btn-gradient hover-icon-reverse" href="#">
+                                <a class="rbt-btn btn-gradient hover-icon-reverse" href="/about-us">
                                     <span class="icon-reverse-wrapper">
                                         <span class="btn-text">More About Us</span>
                                         <span class="btn-icon"><i class="feather-arrow-right"></i></span>
@@ -391,7 +391,7 @@
                                             <i class="feather-check"></i>
                                         </div>
                                         <div class="feature-content">
-                                            <h6 class="feature-title">We want to make complete Entrepreneur</h6>
+                                            <h6 class="feature-title">हम सफल कारोबारी बनने में आपकी मदद करते हैं </h6>
                                         </div>
                                     </div>
 
@@ -400,7 +400,7 @@
                                             <i class="feather-check"></i>
                                         </div>
                                         <div class="feature-content">
-                                            <h6 class="feature-title">We support Make in India campaign.</h6>
+                                            <h6 class="feature-title">हम मेक इन इंडिया अभियान का समर्थन करते हैं।</h6>
                                         </div>
                                     </div>
 
@@ -409,7 +409,7 @@
                                             <i class="feather-check"></i>
                                         </div>
                                         <div class="feature-content">
-                                            <h6 class="feature-title">We are aiming 5 Trillion Economy.</h6>
+                                            <h6 class="feature-title">हमारा लक्ष्य 5 ट्रिलियन इकोनॉमी का है।</h6>
                                         </div>
                                     </div>
                                     <div class="rbt-feature feature-style-1 align-items-center">
@@ -417,7 +417,7 @@
                                             <i class="feather-check"></i>
                                         </div>
                                         <div class="feature-content">
-                                            <h6 class="feature-title">On every enrollment we contribute to a Child’s Education</h6>
+                                            <h6 class="feature-title">प्रत्येक नामांकन पर हम बच्चों की शिक्षा में योगदान करते हैं</h6>
                                         </div>
                                     </div>
                                     <div class="rbt-feature feature-style-1 align-items-center">
@@ -425,7 +425,7 @@
                                             <i class="feather-check"></i>
                                         </div>
                                         <div class="feature-content">
-                                            <h6 class="feature-title">We support Vocal for Local</h6>
+                                            <h6 class="feature-title">हम वोकल फॉर लोकल अभियान का समर्थन करते हैं</h6>
                                         </div>
                                     </div>
 
@@ -434,7 +434,7 @@
                                             <i class="feather-check"></i>
                                         </div>
                                         <div class="feature-content">
-                                            <h6 class="feature-title">We support Atamnirbhar Bharat</h6>
+                                            <h6 class="feature-title">हम आत्मनिर्भर भारत अभियान का समर्थन करते हैं</h6>
                                         </div>
                                     </div>
                                     <div class="rbt-feature feature-style-1 align-items-center">
@@ -442,7 +442,7 @@
                                             <i class="feather-check"></i>
                                         </div>
                                         <div class="feature-content">
-                                            <h6 class="feature-title">We support विकसित भारत अभियान</h6>
+                                            <h6 class="feature-title">हम विकसित भारत अभियान का समर्थन करते हैं</h6>
                                         </div>
                                     </div>
                                     <div class="rbt-feature feature-style-1 align-items-center">
