--- a/Vitkund/Views/Shared/_Layout.cshtml
+++ b/Vitkund/Views/Shared/_Layout.cshtml
@@ -265,7 +265,7 @@
                             <ul class="mainmenu">
 
                                 <li><a href="/index">Home</a></li>
-                                <li><a href="/about-us">About</a></li>
+                                <li><a href="/about-us">About Us</a></li>
                                 <li><a href="/Business-Ideas">Business Ideas</a></li>
 
                                 <li>
@@ -638,14 +638,9 @@
                                     and motivated people. Don’t be shy introduce yourself!
                                 </p>
 
-                                <div class="contact-btn mt--30">
-                                    <a class="rbt-btn hover-icon-reverse btn-border-gradient radius-round" href="contact-us">
-                                        <div class="icon-reverse-wrapper">
-                                            <span class="btn-text">Contact With Us</span>
-                                            <span class="btn-icon"><i class="feather-arrow-right"></i></span>
-                                            <span class="btn-icon"><i class="feather-arrow-right"></i></span>
-                                        </div>
-                                    </a>
+                                <div class="contact-btn">
+                                    <img src="~/Content/assets/images/frame.png" style="max-width:130px; margin-bottom:10px;" alt="Edu-cause"> 
+                                    <h5 class="ft-title">Visit Website</h5>
                                 </div>
                             </div>
                         </div>
@@ -670,7 +665,7 @@
                                         <a href="/plan">Plan</a>
                                     </li>
                                     <li>
-                                        <a href="/videos">Course Videos</a>
+                                        <a href="/gallery">Gallery</a>
                                     </li>
                                 </ul>
                             </div>
@@ -683,13 +678,13 @@
                                     <li>
                                         <a href="/contact-us">Contact Us</a>
                                     </li>
-                                    <li><a href="/course">Courses</a></li>
-                                    <li><a href="/plan">Plan</a></li>
+                                    <li><a href="/Business-Ideas">Business Ideas</a></li>
 
-                                    <li><a href="/our-services">Our Services</a></li>
-                                    <li><a href="/faq">FAQ</a></li>
                                     <li>
-                                        <a href="/gallery">Gallery</a>
+                                        <a href="/Trending-Business">Trending Business </a>
+                                    </li>
+                                    <li>
+                                        <a href="/videos">Course Videos</a>
                                     </li>
 
                                     <li>
@@ -771,21 +766,22 @@
             right: 30px;
             bottom: 45px;
             z-index: 564;
-            width: 194px;
-            color: #fff !important;
-            padding: 6px 10px;
+            width: 150px;
+            color: #333 !important;
+            padding:0px;
             text-transform: uppercase;
             font-family: 'Open Sans', sans-serif;
             font-size: 17px;
-            border-top: 3px solid #fadb4b;
+            /*border-top: 3px solid #fadb4b;*/
             text-align: center;
-            background-color: #333;
+            border-radius:10px;
+            /*background-color: #333;*/
             box-shadow: 0 0 18px rgba(0,0,0,0.3);
         }
     </style>
 
-    <a href="https://api.whatsapp.com/send?phone=+918607609898&text=Hi,%20Virtual%20and%20Integrated%20Technical%20Assistant,%20I%20checked%20your%20Website.%20Can%20we%20discuss%20further?" class="enquiry_btn_link" target="_blank" title="page hit counter">
-        <img src="~/Content/assets/images/whatsapp.png" style="max-width:50px;" border="0" title="WhatsApp chat with VITA" alt="WhatsApp chat with VITA"><br>WhatsApp chat with VITA
+    <a href="https://api.whatsapp.com/send?phone=+918607609898&text=Hi,%20Virtual%20and%20Integrated%20Technical%20Assistant,%20I%20checked%20your%20Website.%20Can%20we%20discuss%20further?" class="enquiry_btn_link" target="_blank" title="WhatsApp chat with VITA">
+        <img src="~/Content/assets/images/whats-app.png" style="max-width:150px;" border="10px" title="WhatsApp chat with VITA" alt="WhatsApp chat with VITA">
     </a>
 
     <!-- JS
