--- a/Vitkund/Views/Home/Login.cshtml
+++ b/Vitkund/Views/Home/Login.cshtml
@@ -31,9 +31,9 @@
                         <div class="form-group">
                             <span id="validationMessagemobileno" style="color:red"></span><span id="maxvalmobileno" style="color:red"></span><span id="requiredvalidationformobileno" style="color:red"></span>
                             <input name="con_name" type="text" id="usernametxtbox" required>
-                            <label>Phone *</label>
+                            <label>Email *</label>
                             <span class="focus-border"></span>
-                            <a href="javascript:void(0);" style="text-align: right; float: right; font-size: 15px;" onclick="GenerateOTP()">Get OTP.</a>
+                            <a href="javascript:void(0);" style="text-align: right; float: right; font-size: 15px;" onclick="GenerateOTP()">Generate OTP</a>
                         </div>
                         <div class="form-group">
                             <input name="con_email" id="passwordtxtbox" type="password" required>
@@ -86,30 +86,53 @@
 </div>
 <script src="~/Scripts/jquery-3.4.1.js"></script>
 <script>
+    //$('#usernametxtbox').on('input', function () {
+    //    var maxLength = 10;
+    //    var inputValue = $(this).val();
+    //    if (/[^0-9]/g.test(inputValue)) {
+    //        topricevalidation = false;
+    //        $('#validationMessagemobileno').text('Only numbers allowed (0-9)');
+    //    }
+    //    else {
+    //        topricevalidation = true;
+    //        $('#validationMessagemobileno').text('');
+    //    }
+    //    // Allow only numbers (0-9)
+    //    var numericValue = inputValue.replace(/[^0-9]/g, '');
+    //    $(this).val(numericValue);
+    //    if (inputValue.length > maxLength) {
+    //        // Trim the input to the maximum length
+    //        var trimmedValue = inputValue.substring(0, maxLength);
+    //        $(this).val(trimmedValue);
+    //        $("#maxvalmobileno").text("Only " + maxLength + " Digits allowed.");
+    //    }
+    //    else {
+    //        $("#maxvalmobileno").text("");
+    //    }
+    //});
     $('#usernametxtbox').on('input', function () {
-        var maxLength = 10;
-        var inputValue = $(this).val();
-        if (/[^0-9]/g.test(inputValue)) {
-            topricevalidation = false;
-            $('#validationMessagemobileno').text('Only numbers allowed (0-9)');
-        }
-        else {
-            topricevalidation = true;
-            $('#validationMessagemobileno').text('');
-        }
-        // Allow only numbers (0-9)
-        var numericValue = inputValue.replace(/[^0-9]/g, '');
-        $(this).val(numericValue);
-        if (inputValue.length > maxLength) {
-            // Trim the input to the maximum length
-            var trimmedValue = inputValue.substring(0, maxLength);
-            $(this).val(trimmedValue);
-            $("#maxvalmobileno").text("Only " + maxLength + " Digits allowed.");
-        }
-        else {
-            $("#maxvalmobileno").text("");
-        }
-    });
+        debugger;
+    var maxLength = 50;
+    var inputValue = $(this).val();
+    var emailPattern = /^[a-zA-Z0-9._%+-]+@@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$/;
+
+    if (inputValue.length > 0 && !emailPattern.test(inputValue)) {
+        topricevalidation = false;
+        $('#validationMessagemobileno').text('Enter a valid email address');
+    } else {
+        topricevalidation = true;
+        $('#validationMessagemobileno').text('');
+    }
+
+    if (inputValue.length > maxLength) {
+        var trimmedValue = inputValue.substring(0, maxLength);
+        $(this).val(trimmedValue);
+        $("#maxvalmobileno").text("Only " + maxLength + " characters allowed.");
+    } else {
+        $("#maxvalmobileno").text("");
+    }
+});
+
     function LoginAdmin() {
         var username = $("#usernametxtbox").val();
         var password = $("#passwordtxtbox").val();
@@ -150,7 +173,7 @@
             alert('Please Enter Login Details.');
         }
     }
-    
+
     function LoginAdmin() {
         var username = $("#usernametxtbox").val();
         var OTP = $("#passwordtxtbox").val();
