Update For Price

--- a/Vitkund/Views/Home/Result.cshtml
+++ b/Vitkund/Views/Home/Result.cshtml
@@ -380,10 +380,10 @@
                                 <div class="rbt-modern-select bg-transparent height-45">
                                     <select class="w-100 validationcheck" id="plan" required>
                                         @*<option value="">-- Select Plan --</option>*@
-                                        <option value="500000">Pro (Recommended) 5000 /(3 Month)</option>
-                                        <option value="750000">Clasic 7500 /(6 Month)</option>
-                                        <option value="1000000">Silver 10000 /(9 Month)</option>
-                                        <option value="1250000">Gold 12500 /(12 Month)</option>
+                                        <option value="150000" selected >Pro (Recommended) 1500 /(3 Month)</option>
+                                        <option value="200000">Clasic 2000 /(6 Month)</option>
+                                        <option value="250000">Silver 2500 /(9 Month)</option>
+                                        <option value="300000">Gold 3000 /(12 Month)</option>
 
                                     </select>
                                     <span id="spanPlan" style="color:red;display:none">Please select plan</span>
